--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 VITE_CONTRACT_INVENTORY=0x22d5f9B75c524Fec1D6619787e582644CD4D7422
+VITE_CONTRACT_INVENTORY_EXTENDED=0x2933e994dcb945771826C35662Ad28f0488c8202
 VITE_CONTRACT_FARM=0x2B4A66557A79263275826AD31a4cDDc2789334bD
 VITE_IMAGE_URI=https://sunflower-land.com/play/erc1155
